
-BUG FIX: Fixed Privacy Mode to never allow the interface to render (show), UNTIL AFTER PRIVATE DATA HAS BEEN HIDDEN

-BUG FIX: Fixed "Primary Currency" being improperly set in the user interface, under certain conditions (sorry!)

-BUG FIX: Javascript-based cookie DELETION now works properly

-BUG FIX: Miscellaneous 

-New PER-market error reporting feature, to send comms alerts on X CONSECUTIVE DAYS of market data errors, for any particular market data being requested by the app (can be disabled if desired, in the comms admin section)

-Search feature for the "System Monitoring => App Logs" interface (to only show log lines matching the search query)

-DAILY limit advanced API throttling (for APIs like AlphaVantage FREE tier), for more reliable market data requests

-Stock Overview information, when hovering over the info icon on the My Portfolio page (next to the asset name)

-Throttling for internal webhook plugins (to control how often external API requests can retrieve data)

-Navigation buttons / links are now animated on hover and click

-Revised DEMO config

-UX improvements

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.02

-BUG FIX: Fixed price chart titles covering time period links, on smaller screens

-BUG FIX: Miscellaneous (minor)

-Upgraded to Jupiter Aggregator PRICE API v3 (UPGRADE THIS APP BY AUGUST 1ST 2025, TO KEEP GETTING JUPITER PRICE DATA)

-Minor polished interface styling / UX

-Code refactoring / cleanup

-------------------------------------------------------------------





