@@ -6921,7 +6921,9 @@ AND MIGRATE YOUR EXISTING CUSTOM SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous (minor)
 
--Upgraded to Jupiter Aggregator PRICE API v3 (UPGRADE THIS APP BY AUGUST 1ST 2025, TO KEEP GETTING JUPITER PRICE DATA)
+-Upgraded to Jupiter Aggregator TOKEN API v2 (UPGRADE THIS APP BY AUGUST 1ST 2025, TO KEEP GETTING JUPITER MARKET DATA)
+
+-Upgraded to Jupiter Aggregator PRICE API v3 (UPGRADE THIS APP BY AUGUST 1ST 2025, TO KEEP GETTING JUPITER MARKET DATA)
 
 -Minor polished interface styling / UX
 
